fix vertical alignment + add menu

--- a/sass/bar.scss
+++ b/sass/bar.scss
@@ -143,8 +143,8 @@
 
         font-weight: bold;
 
-        min-height: 4rem;
-        height: 4rem;
+        //min-height: 4rem;
+        //height: 4rem;
 
         &:after {
             content: '';
