--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -9,6 +9,7 @@ $base-font-size: 6rem;
 /*-----*/
 
 $default-color: #FFFF99;
+$title-color: #6688cc;
 
 $base-spacing: to_em(2);
 $double-spacing: $base-spacing * 2;
